fix: contrast ratio of highlight style

--- a/assets/scss/_common/_highlight/light.scss
+++ b/assets/scss/_common/_highlight/light.scss
@@ -44,10 +44,10 @@
 /* LiteralNumberIntegerLong */ .chroma .il { color: #009999 }
 /* LiteralNumberOct */ .chroma .mo { color: #009999 }
 /* OperatorWord */ .chroma .ow { color: #0000aa }
-/* Comment */ .chroma .c { color: #aaaaaa }
-/* CommentHashbang */ .chroma .ch { color: #aaaaaa }
-/* CommentMultiline */ .chroma .cm { color: #aaaaaa }
-/* CommentSingle */ .chroma .c1 { color: #aaaaaa }
+/* Comment */ .chroma .c { color: #696969 }
+/* CommentHashbang */ .chroma .ch { color: #696969 }
+/* CommentMultiline */ .chroma .cm { color: #696969 }
+/* CommentSingle */ .chroma .c1 { color: #696969 }
 /* CommentSpecial */ .chroma .cs { color: #0000aa }
 /* CommentPreproc */ .chroma .cp { color: #4c8317 }
 /* CommentPreprocFile */ .chroma .cpf { color: #4c8317 }
@@ -55,8 +55,8 @@
 /* GenericError */ .chroma .gr { color: #aa0000 }
 /* GenericHeading */ .chroma .gh { color: #000080 }
 /* GenericInserted */ .chroma .gi { color: #00aa00 }
-/* GenericOutput */ .chroma .go { color: #888888 }
-/* GenericPrompt */ .chroma .gp { color: #555555 }
+/* GenericOutput */ .chroma .go { color: #5f5f5f }
+/* GenericPrompt */ .chroma .gp { color: #424242 }
 /* GenericSubheading */ .chroma .gu { color: #800080 }
 /* GenericTraceback */ .chroma .gt { color: #aa0000 }
-/* TextWhitespace */ .chroma .w { color: #bbbbbb }
+/* TextWhitespace */ .chroma .w { color: #797979 }
